# Personal-Daily-News

./: .dockerignore  .gitignore  channels.yaml  daily_news.py  db.py  docker-compose.yml  secrets.env.example
.github/workflows/: daily-news.yml
docs/: deploy.md
service/: pyproject.toml
service/app/: db.py  main.py  rate_limit.py  settings.py  signing.py
service/app/routes/: click.py
service/tests/: conftest.py  test_click.py  test_signing.py
